# Scal3R

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/models/: scal3r.yaml
docs/: install.md
scal3r/: run.py
scal3r/dataloaders/datasets/: __init__.py  image_folder_dataset.py
scal3r/engine/: __init__.py  config.py  io.py  misc.py  path.py
scal3r/models/: __init__.py  scal3r.py
scal3r/pipelines/: __init__.py  backend.py  inference.py
scal3r/utils/: __init__.py  base_utils.py  cam_utils.py  console_utils.py  data_utils.py  dist_utils.py  image_utils.py  math_utils.py  offload_utils.py  parallel_utils.py  ray_utils.py  result_utils.py  runtime_utils.py  ttt_utils.py
scal3r/utils/loop/: __init__.py  detector.py  loop_utils.py  optimizer.py
scal3r/utils/loop/fastloop/: solve_python.py
scal3r/utils/loop/models/: __init__.py  helper.py
scal3r/utils/pgo/: __init__.py  aligner.py  constraint.py  optimizer.py  processor.py  submap.py  utils.py
scal3r/utils/vggt/: __init__.py
scal3r/utils/vggt/heads/: __init__.py  camera_head.py  dpt_head.py  head_act.py  utils.py
scal3r/utils/vggt/layers/: __init__.py  attention.py  block.py  layer_scale.py  mlp.py  patch_embed.py  rope.py  swiglu_ffn.py  vision_transformer.py
scal3r/utils/vggt/models/: __init__.py  aggregator.py
scripts/: clean.sh  install.sh
scripts/visualize/: README.md  requirements.txt  viser_viewer.py
scripts/visualize/tools/: images_to_video.py
scripts/visualize/utils/: camera_utils.py  color_utils.py  point_utils.py  render_utils.py
(+12 files in other folders)
